--- a/index.html
+++ b/index.html
@@ -9,9 +9,6 @@
 <body>
 
 <div class="topbuffer"></div>
-<div class="bottombuffer">
-    <a>Copyright © 2021 Aidan Sprague.</a>
-</div>
 
 <div class="row">
     <div class="column">
@@ -53,17 +50,22 @@
     <h2>What Do I Do?</h2>
 
     <h3>AnaVation, LLC - Intern</h3>
-    <h5>May 2021 - August 2021 (Future)</h5>
+    <h5>
+        May 2021 - August 2021 (Future) |
+        <a href="https://anavationllc.com/" style="color: #555; font-size: 1em;" target="_blank" rel="noopener noreferrer">Website</a>
+    </h5>
     <p style="margin-bottom: 3em;">
         Following a meeting with the firm's CEO at the Virginia Tech CS|Source Career Fair and a subsequent
-        interview, I have been offered a position as a Summer Intern with AnaVation, LLC
-        (<a href="https://anavationllc.com/" target="_blank" rel="noopener noreferrer">Their Website</a>)! I'm still
-        waiting to hear about the specific projects that I'll be working on, but I should find out soon and will keep
-        this page updated! The program runs from mid-May through early-August.
+        interview, I have been offered a position as a Summer Intern with AnaVation, LLC ! I'm still waiting to
+        hear about the specific projects that I'll be working on, but I should find out soon and will keep this page
+        updated! The program runs from mid-May through early-August.
     </p>
 
     <h3>VT Computer Science Department - Teaching Assistant</h3>
-    <h5>January 2021 - May 2021 (Future)</h5>
+    <h5>
+        January 2021 - May 2021 (Future) |
+        <a href="https://hosting.cs.vt.edu/diversity/opportunities.html" style="color: #555; font-size: 1em;" target="_blank" rel="noopener noreferrer">Website</a>
+    </h5>
     <p style="margin-bottom: 3em;">
         Upon finishing the course CS 2505 (Intro to Computer Organization I) at Virginia Tech, I was sent an
         offer from the course professor (William McQuain) with an offer to be a Teaching Assistant for the
@@ -73,7 +75,10 @@
     </p>
 
     <h3>Artificial Intelligence & Machine Learning Club - Treasurer</h3>
-    <h5>August 2020 - Present</h5>
+    <h5>
+        August 2020 - Present |
+        <a href="#" style="color: #555; font-size: 1em;">Website</a>
+    </h5>
     <p>
         I joined the AI/ML club at the beginning of the Fall 2020 semester as just a member so I could get some
         better hands-on experience with the field. We went over a bunch of interesting topics including:
@@ -100,7 +105,10 @@
     </ul>
 
     <h3>Design, Build, Fly! at VT - SEC Representative & Outreach Coordinator</h3>
-    <h5>October 2019 - Present</h5>
+    <h5>
+        October 2019 - Present |
+        <a href="https://eng.vt.edu/student-teams/design-build-fly.html" style="color: #555; font-size: 1em;" target="_blank" rel="noopener noreferrer">Website</a>
+    </h5>
     <p>
         DBF was the first club I joined at Virginia Tech; each year, we create an unmanned, electric powered,
         radio-controlled aircraft to be applied to "real world" missions. It's a pretty substantial task which involves
@@ -122,7 +130,10 @@
     </ul>
 
     <h3>Web Development at VT - Member</h3>
-    <h5>August 2020 - Present</h5>
+    <h5>
+        August 2020 - Present |
+        <a href="https://webdvt.org/" style="color: #555; font-size: 1em;" target="_blank" rel="noopener noreferrer">Website</a>
+    </h5>
     <p>
         I'm not going to lie - prior to this past semester, I knew little to nothing about web design. Understanding
         this myself, I decided I would join a club that would give me some experience and knowledge on the topic; enter
@@ -147,6 +158,10 @@
 <div class="container">
     <div id="quoteDisplay" style="text-align: center; margin-top: 1em; margin-bottom: 2em"></div>
     <script>newQuote();</script>
+</div>
+
+<div class="bottombuffer">
+    <a>Copyright © 2021 Aidan Sprague.</a>
 </div>
 
 </body>
