--- a/pages/contact.html
+++ b/pages/contact.html
@@ -9,9 +9,6 @@
 <body>
 
 <div class="topbuffer"></div>
-<div class="bottombuffer">
-    <a>Copyright © 2021 Aidan Sprague.</a>
-</div>
 
 <div class="row">
     <div class="column">
@@ -31,12 +28,24 @@
     <div class="typewriter">
         <h1>How to Contact Me:</h1>
     </div>
-    <ul>
-        <li><b>General Email</b>: azsprague@vt.edu</li>
-        <li><b>Personal Email</b>: aidanzsprague@gmail.com</li>
+</div>
+
+<div class="container">
+    <h2>General:</h2>
+    <p>
+        For general inquiries, including questions, comments, concerns, or bugs with this site, feel free to contact
+        me at:
+    </p>
+    <ul style="margin-bottom: 3em;">
+        <li><b>Email</b>: azsprague@vt.edu</li>
         <li><b>Cell</b>: (571) 289-5959</li>
     </ul>
-    <br>
+
+    <h2>Important:</h2>
+    <p style="margin-bottom: 3em;">
+        For professional inquiries, including offers, please email me at: <u>aidanzsprague@gmail.com</u>
+    </p>
+
     <h2>Other Sites:</h2>
     <ul>
         <li><a href="https://github.com/azsprague" target="_blank" rel="noopener noreferrer" style="color: black">GitHub Profile</a></li>
@@ -47,6 +56,10 @@
 <div class="container">
     <div id="quoteDisplay" style="text-align: center; margin-top: 1em; margin-bottom: 2em"></div>
     <script>newQuote();</script>
+</div>
+
+<div class="bottombuffer">
+    <a>Copyright © 2021 Aidan Sprague.</a>
 </div>
 
 </body>
