--- a/pages/projects.html
+++ b/pages/projects.html
@@ -9,9 +9,6 @@
 <body>
 
 <div class="topbuffer"></div>
-<div class="bottombuffer">
-    <a>Copyright © 2021 Aidan Sprague.</a>
-</div>
 
 <div class="row">
     <div class="column">
@@ -37,46 +34,70 @@
     <h3>This Website!</h3>
     <a href="https://github.com/azsprague/azsprague.github.io" target="_blank" rel="noopener noreferrer" style="color: #555">Repository</a>
     <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci aperiam doloremque ipsa libero nam
-        reprehenderit velit? Aliquid autem culpa cum delectus dolores eligendi enim fugit id, incidunt nam nobis
-        nostrum officia provident quae quam quisquam ratione reiciendis repellat, sequi voluptatem. Eligendi ipsum
-        nobis officiis recusandae reiciendis reprehenderit similique suscipit voluptas.
+        Over Winter break, I decided it was time to have my own website; a place for my thoughts, ideas, and projects to
+        land. I explored a few different avenues, but ultimately decided to go with GitHub Pages to host the site. They
+        make it <i>super</i> simple to get everything up and running, and even offer 1Gb of storage for free. Maybe I'll
+        write a how-to on the process someday...
+    </p>
+    <p>
+        The nuts and bolts of the site are also relatively rudimentary. Since everything on the website is static (i.e.
+        nothing is drastically changing), I only really need HTML with a little bit of CSS and JavaScript for flair.
+        This whole site is a work in progress; it's my first endeavor into building a website from scratch, so there's
+        still plenty that I'm learning and changing everyday. I know it seems right out of the late 2000's right now,
+        but you just wait.
+    </p>
+    <p style="margin-bottom: 3em;">
+        Bonus Two Cents: my go-to IDE for web development is Webstorm from JetBrains
+        (<a href="https://www.jetbrains.com/webstorm/" target="_blank" rel="noopener noreferrer">link</a>). IMO, it's
+        more intuitive and fluid that VS Code (and sometimes it's nice to be different than everybody else).
     </p>
 
     <h3>Financial Organization System</h3>
     <a href="https://github.com/azsprague/Financial-Organization-System" target="_blank" rel="noopener noreferrer" style="color: #555">Repository</a>
     <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci deleniti expedita illo iure, modi nesciunt
-        nihil odio possimus quam voluptatibus? A alias aliquam aliquid aspernatur autem, consequatur corporis ducimus
-        et harum illo illum incidunt ipsam laboriosam nam neque officia officiis optio praesentium qui repudiandae
-        soluta tenetur totam ut. Accusantium, assumenda.
+        Being the Treasurer for one club and running a chunk of the financials for another, I figured it would be
+        worthwhile to design something that could assist me with keeping funds and purchases in order; that's why I
+        set out to make this system. Utilizing a local SQL database, this java program allows me to perform most of
+        the operations I need to keep track of club financials, including:
+    </p>
+    <ul>
+        <li>Adding a Fund</li>
+        <li>Inputting a Purchase</li>
+        <li>Looking up Fund Amounts</li>
+        <li>Looking up Purchase History</li>
+    </ul>
+    <p style="margin-bottom: 3em;">
+        And more. In theory, I could just use an excel spreadsheet to keep track of this information, however this
+        system is more streamlined and faster to find specific data (for my uses at least). More information about the
+        system itself and the source code can be found at the link to the repository above.
     </p>
 
     <h3>Automated Email System</h3>
     <a href="https://github.com/azsprague/Automated-Email-System" target="_blank" rel="noopener noreferrer" style="color: #555">Repository</a>
     <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere fugit harum ipsa iusto molestias nam, neque,
-        nesciunt numquam obcaecati officiis quae saepe, ut voluptatibus? Autem dolore inventore necessitatibus rem sint
-        vel? Architecto aspernatur ducimus mollitia nesciunt rerum? Debitis dignissimos doloribus dolorum eius error
-        illum in, officia, quasi sint vel voluptatem.
+        This project started out more as a joke between me and my friends. We wanted a way to send repeated texts to
+        each other without having to send them ourselves, so we set out to make a system to do it. Our first rendition
+        was finished in the Spring of 2020, and while it got the job done, it was largely a mess and was inevitably
+        forgotten. A few months ago, however, I found the code on my laptop and decided that I would take the time to
+        clean it up and optimize things.
+    </p>
+    <p style="margin-bottom: 3em;">
+        The current system today has been redesigned to be an automated messaging system that will send either a one-time
+        or daily reminder to any number of recipients. Instead of simply a joke amongst friends, I actually can use
+        this code to text me at certain times of day to remember things I would otherwise forget. More information about
+        the system itself and the source code can be found at the link to the repository above.
     </p>
 
     <h3>Java BlackJack (With GUI)</h3>
     <a href="https://github.com/azsprague/Blackjack-Java" target="_blank" rel="noopener noreferrer" style="color: #555">Repository</a>
-    <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid hic, magnam modi nemo nostrum pariatur rem
-        repellendus vel? Dolorum eum inventore iusto libero minima nobis officia repudiandae soluta? Dolores hic minus
-        molestiae odit provident quaerat similique totam! Doloremque nobis porro quaerat quas quisquam sequi, suscipit
-        ullam ut! Excepturi, harum itaque.
+    <p style="margin-bottom: 3em;">
+        Currently in the process of cleaning up the repository. Check back soon for project details!
     </p>
 
     <h3>Java Hangman (Text-Based)</h3>
     <a href="https://github.com/azsprague/Hangman-Java" target="_blank" rel="noopener noreferrer" style="color: #555">Repository</a>
     <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda blanditiis consectetur consequuntur
-        deserunt, doloremque dolorum est excepturi explicabo facere illum ipsa ipsam ipsum iste laboriosam magni
-        maiores minima modi molestiae nam natus necessitatibus nisi nobis obcaecati provident, quae ullam veniam!
-        Delectus dolore enim et eveniet ipsum magnam maiores qui recusandae!
+        Currently in the process of cleaning up the repository. Check back soon for project details!
     </p>
 
 </div>
@@ -84,6 +105,10 @@
 <div class="container">
     <div id="quoteDisplay" style="text-align: center; margin-top: 1em; margin-bottom: 2em"></div>
     <script>newQuote();</script>
+</div>
+
+<div class="bottombuffer">
+    <a>Copyright © 2021 Aidan Sprague.</a>
 </div>
 
 </body>
