--- a/pages/skills.html
+++ b/pages/skills.html
@@ -9,9 +9,6 @@
 <body>
 
 <div class="topbuffer"></div>
-<div class="bottombuffer">
-    <a>Copyright © 2021 Aidan Sprague.</a>
-</div>
 
 <div class="row">
     <div class="column">
@@ -36,59 +33,91 @@
 <div class="container">
     <h2>Backend:</h2>
     <h3>Java:</h3>
+    <h5>Proficiency: 8/10</h5>
     <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias aut, cum, dignissimos doloremque hic impedit
-        magnam magni obcaecati odio, quo ratione repudiandae rerum similique temporibus.
+        Java is definitely my most fluent and confident language; it was the first that I learned, and is generally
+        my go-to for moderate to large size systems. Given enough time (and access to Stack Overflow), I could create
+        just about anything in this language.
     </p>
+
     <h3>C:</h3>
+    <h5>Proficiency: 5/10</h5>
     <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam, consequatur debitis doloremque, dolores
-        facere, iusto libero magnam mollitia nobis nulla quas sit suscipit vero! Voluptatem.
+        C is newer to me; I've only spent a few months working with it, however I've picked it up rather quickly.
+        The memory management takes a little bit of getting used to, but I respect the power that this language can
+        pack.
     </p>
+
     <h3>C#:</h3>
-    <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem dolores dolorum ducimus eaque est itaque,
-        iure magni, maiores, nostrum odit perspiciatis qui quidem temporibus voluptatibus!
+    <h5>Proficiency: 5/10</h5>
+    <p style="margin-bottom: 3em;">
+        C# is pretty similar to Java in a lot of ways and thus was not difficult for me to pick up. I began to learn
+        this language for an endeavor into video game development and found it to be quite nice, however my experience
+        is limited.
     </p>
 
     <h2>Frontend:</h2>
     <h3>HTML:</h3>
+    <h5>Proficiency: 8/10</h5>
     <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad blanditiis consequuntur eligendi explicabo
-        laboriosam laborum mollitia recusandae rem sint voluptatibus. Corporis nemo optio quod voluptates.
+        After making this website, HTML comes very naturally to me. It's a straightforward and simple markup language
+        that gets the job done. Enough said.
     </p>
+
     <h3>CSS:</h3>
+    <h5>Proficiency: 6/10</h5>
     <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci error libero praesentium. Aperiam deleniti
-        ea, eius eum facere ipsam iste itaque magni minima repellat voluptatum.
+        CSS is a little more elusive than HTML, with more commands and the addition of animations and other special
+        manipulations. I learned a lot while making this site, but there's still a lot to learn.
     </p>
+
     <h3>JavaScript:</h3>
-    <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid beatae culpa dolore harum ipsa magni, minima
-        neque quo, ratione, reiciendis repellendus tempore ut velit vero.
+    <h5>Proficiency: 4/10</h5>
+    <p style="margin-bottom: 3em;">
+        JavaScript syntax is easy to pick up, but the actual usage has a ton that I'm just beginning to learn. I only
+        use it sparingly in this site, but I know it can be used to host entire back-ends on its own.
     </p>
 
     <h2>Other:</h2>
     <h3>Python:</h3>
+    <h5>Proficiency: 7/10</h5>
     <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut debitis dicta dolor error et laborum minima
-        nihil non, numquam odio, omnis quidem repellendus sed, ut!
+        Python is my go-to language for quick prototyping and small programs. It's super easy to use and learn, there
+        are libraries for almost any application, and it works with just about everything.
     </p>
+
     <h3>MATLAB:</h3>
+    <h5>Proficiency: 5/10</h5>
     <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto at consequuntur cum delectus enim fugiat
-        fugit nam natus nesciunt, obcaecati optio rem sed vel veritatis!
+        I only used MATLAB for my first year at Virginia Tech, but it wasn't too hard to learn and is definitely
+        king for scientific work and data modeling.
     </p>
+
     <h3>AWS:</h3>
+    <h5>Proficiency: 3/10</h5>
     <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error facere hic, nam nostrum praesentium repellat
-        reprehenderit ullam! At non quaerat quod reiciendis similique suscipit veritatis.
+        As of January 2020, I've started learning the Amazon Web Services suite and plan on <b>eventually</b>
+        earning several certifications, including:
+    </p>
+    <ul>
+        <li>Certified Cloud Practitioner</li>
+        <li>Certified Developer - Associate</li>
+        <li>Certified Solutions Architect - Associate</li>
+        <li>Certified SysOps Administrator - Associate</li>
+    </ul>
+    <p>
+        I'm still in the very early stages of learning, however I hope to finish everything by the start of the 2021-22
+        academic year.
     </p>
 </div>
 
 <div class="container">
     <div id="quoteDisplay" style="text-align: center; margin-top: 1em; margin-bottom: 2em"></div>
     <script>newQuote();</script>
+</div>
+
+<div class="bottombuffer">
+    <a>Copyright © 2021 Aidan Sprague.</a>
 </div>
 
 </body>
