--- a/pages/skills.html
+++ b/pages/skills.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Aidan Sprague | Skills</title>
-    <link rel="stylesheet" href="../styles/style.css" type="text/css">
+    <link rel="image_src" href="images/headshot.png" />
+    <link rel="stylesheet" href="../styles/style.css" type="text/css" />
     <script src="../scripts/quotes.js" type="text/javascript"> </script>
 </head>
 <body>
