--- a/pages/projects.html
+++ b/pages/projects.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Aidan Sprague | Projects</title>
-    <link rel="stylesheet" href="../styles/style.css" type="text/css">
+    <link rel="image_src" href="images/headshot.png" />
+    <link rel="stylesheet" href="../styles/style.css" type="text/css" />
     <script src="../scripts/quotes.js" type="text/javascript"> </script>
 </head>
 <body>
@@ -91,13 +92,16 @@
     <h3>Java BlackJack (With GUI)</h3>
     <a href="https://github.com/azsprague/Blackjack-Java" target="_blank" rel="noopener noreferrer" style="color: #555">Repository</a>
     <p style="margin-bottom: 3em;">
-        Currently in the process of cleaning up the repository. Check back soon for project details!
+        My version of Blackjack may not be the prettiest that you'll ever see, but considering it's using standard
+        Java library classes and methods, I'm proud of it. It uses standard casino blackjack rules, has a decent
+        looking GUI, and runs like a charm.
     </p>
 
     <h3>Java Hangman (Text-Based)</h3>
     <a href="https://github.com/azsprague/Hangman-Java" target="_blank" rel="noopener noreferrer" style="color: #555">Repository</a>
     <p>
-        Currently in the process of cleaning up the repository. Check back soon for project details!
+        I made this game in the Spring of 2020 as a fun project, nothing too serious; it's just a fun, simple
+        version of Hangman that runs in your terminal.
     </p>
 
 </div>
