--- a/pages/contact.html
+++ b/pages/contact.html
@@ -38,13 +38,13 @@
         me at:
     </p>
     <ul style="margin-bottom: 3em;">
-        <li><b>Email</b>: azsprague@vt.edu</li>
+        <li><b>Email</b>: <a href="mailto:azsprague@vt.edu" style="color: black">azsprague@vt.edu</a></li>
         <li><b>Cell</b>: (571) 289-5959</li>
     </ul>
 
     <h2>Important:</h2>
     <p style="margin-bottom: 3em;">
-        For professional inquiries, including offers, please email me at: <u>aidanzsprague@gmail.com</u>
+        For professional inquiries, including offers, please email me at: <a href="mailto:azsprague@vt.edu" style="color: black">aidanzsprague@gmail.com</a>
     </p>
 
     <h2>Other Sites:</h2>
