--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
         I'm an aspiring Software Developer, UX Designer, and Entrepreneur from the Northern Virginia
         area. I'm a second-year Computer Science student at Virginia Tech with a minor in Human-Computer
         Interaction and a focus in Artificial Intelligence. I currently hold two club leadership positions,
-        plan to serve as an Undergraduate Teaching Assistant for the Computer Science Department in the
-        upcoming Spring semester, and have a Summer 2021 internship planned with AnaVation, LLC.
+        serve as an Undergraduate Teaching Assistant for the Computer Science Department, and have a Summer 2021
+        internship planned with AnaVation, LLC.
     </p>
     <p>
         Software design has been a big passion of mine for years. To me, creating a system, algorithm,
@@ -64,21 +64,20 @@
 
     <h3>VT Computer Science Department - Teaching Assistant</h3>
     <h5>
-        January 2021 - May 2021 (Future) |
+        January 2021 - May 2021 |
         <a href="https://hosting.cs.vt.edu/diversity/opportunities.html" style="color: #555; font-size: 1em;" target="_blank" rel="noopener noreferrer">Website</a>
     </h5>
     <p style="margin-bottom: 3em;">
-        Upon finishing the course CS 2505 (Intro to Computer Organization I) at Virginia Tech, I was sent an
-        offer from the course professor (William McQuain) with an offer to be a Teaching Assistant for the
-        Computer Science Department. I haven't been told which course or section I would be responsible for,
-        but I should be hearing back soon. The position is currently for the Spring Semester, running from
-        late-January through early-May.
+        Upon finishing the course CS 2505 (Intro to Computer Organization) at Virginia Tech, I was sent an
+        offer from the course professor with an offer to be a Teaching Assistant for the Computer Science
+        Department. Along with 11 other TA's, I devote 10 hours each week helping over 300 students complete their
+        coding assignments and delve deeper into an awesome field.
     </p>
 
     <h3>Artificial Intelligence & Machine Learning Club - Treasurer</h3>
     <h5>
         August 2020 - Present |
-        <a href="#" style="color: #555; font-size: 1em;">Website</a>
+        <a href="https://github.com/vt-ai-ml" style="color: #555; font-size: 1em;" target="_blank" rel="noopener noreferrer">Website</a>
     </h5>
     <p>
         I joined the AI/ML club at the beginning of the Fall 2020 semester as just a member so I could get some
