--- a/pages/projects.html
+++ b/pages/projects.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Aidan Sprague | Projects</title>
-    <link rel="image_src" href="images/headshot.png" />
+    <link rel="image_src" href="images/headshot.jpg" />
     <link rel="stylesheet" href="../styles/style.css" type="text/css" />
     <script src="../scripts/quotes.js" type="text/javascript"> </script>
 </head>
