--- a/pages/projects.html
+++ b/pages/projects.html
@@ -13,7 +13,7 @@
 
 <div class="row">
     <div class="column">
-        <img src="../images/headshot.png" alt="A picture of myself" class="rounded">
+        <img src="../images/headshot.jpg" alt="A picture of myself" class="rounded">
     </div>
     <div class="column">
         <div class="navbar">
