--- a/index.html
+++ b/index.html
@@ -54,25 +54,13 @@
 
     <h3>AnaVation, LLC - Intern</h3>
     <h5>
-        May 2021 - August 2021 |
+        May 2021 - Present |
         <a href="https://anavationllc.com/" style="color: #555; font-size: 1em;" target="_blank" rel="noopener noreferrer">Website</a>
     </h5>
     <p style="margin-bottom: 3em;">
         Working in a team of four developers, our group is tasked with creating a Remote Access Tool (RAT) to
         be used in Penetration Testing and ethical hacking. We follow the Agile/Scrum methodology in order
         to ensure the delivery of a useful and successful product.
-    </p>
-
-    <h3>VT Computer Science Department - Teaching Assistant</h3>
-    <h5>
-        January 2021 - May 2021 |
-        <a href="https://hosting.cs.vt.edu/diversity/opportunities.html" style="color: #555; font-size: 1em;" target="_blank" rel="noopener noreferrer">Website</a>
-    </h5>
-    <p style="margin-bottom: 3em;">
-        Along with 11 other TA's, I devoted 10 hours each week helping over 300 students complete their
-        coding assignments and delve deeper into an awesome field. The course (CS 2505 - Intro to Computer
-        Organization I) gives students an introduction to high-level computer architecture and system concepts,
-        system software, and programming in C.
     </p>
 
     <h3>Artificial Intelligence & Machine Learning Club - Treasurer</h3>
@@ -105,9 +93,9 @@
         <li>Collaborating with Other Leaders on Club Direction</li>
     </ul>
 
-    <h3>Design, Build, Fly! at VT - SEC Representative & Outreach Coordinator</h3>
+    <h3>Design Build Fly at VT - Project Manager</h3>
     <h5>
-        October 2019 - Present |
+        May 2021 - Present |
         <a href="https://eng.vt.edu/student-teams/design-build-fly.html" style="color: #555; font-size: 1em;" target="_blank" rel="noopener noreferrer">Website</a>
     </h5>
     <p>
@@ -119,16 +107,28 @@
     </p>
     <p>
         Alongside Manufacturing, I shadowed the club's Student Engineer's Council Representative and Outreach Coordinator
-        (Jack Barnes) to learn more about how the club gets funding and promotes itself. Fast-Forward to the 2020-21
-        school year, and here I am in that exact position! My exact duties entail:
+        to learn more about how the club gets funding and promotes itself. Fast-Forward to the 2020-21 school year,
+        and I was in that exact position! My duties included representing the team amongst every other engineering
+        group, allocating funding from the SEC, organizing and filing receipts, and planning outreach events. Working
+        closely alongside the Project Manager, I was able to get a feel for what that role included, and at the end
+        of my Sophomore year I was elected for that position.
     </p>
-    <ul style="margin-bottom: 3em;">
-        <li>Representing the Club Among All of the Engineering Clubs</li>
-        <li>Allocating Club Funding from the SEC</li>
-        <li>Organizing and Filing Receipts</li>
-        <li>Communicating with the Project Manager</li>
-        <li>Planning Outreach Events to Promote the Club</li>
-    </ul>
+    <p style="margin-bottom: 3em;">
+        The year hasn't begun yet, however I've been working with the Chief Engineer (Lemuel Hook) to get the team
+        prepared for the upcoming season. Stay tuned for more info!
+    <p>
+
+    <h3>VT Computer Science Department - Teaching Assistant</h3>
+    <h5>
+        January 2021 - May 2021 |
+        <a href="https://hosting.cs.vt.edu/diversity/opportunities.html" style="color: #555; font-size: 1em;" target="_blank" rel="noopener noreferrer">Website</a>
+    </h5>
+    <p style="margin-bottom: 3em;">
+        Along with 11 other TA's, I devoted 10 hours each week helping over 300 students complete their
+        coding assignments and delve deeper into an awesome field. The course (CS 2505 - Intro to Computer
+        Organization I) gives students an introduction to high-level computer architecture and system concepts,
+        system software, and programming in C.
+    </p>
 
     <h3>Web Development at VT - Member</h3>
     <h5>
