--- a/pages/skills.html
+++ b/pages/skills.html
@@ -42,11 +42,11 @@
     </p>
 
     <h3>C:</h3>
-    <h5>Proficiency: 5/10</h5>
+    <h5>Proficiency: 7/10</h5>
     <p>
-        C is newer to me; I've only spent a few months working with it, however I've picked it up rather quickly.
-        The memory management takes a little bit of getting used to, but I respect the power that this language can
-        pack.
+        Spending my Sophomore year taking classes in C (as well as being a TA for one) has allowed me to pick
+        up the language nicely. I know more than enough to get around, and know where to look when I have
+        questions.
     </p>
 
     <h3>C#:</h3>
