--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 <div class="container">
     <h2>What Do I Do?</h2>
 
-    <h3>AnaVation, LLC - Intern</h3>
+    <h3>AnaVation, LLC - Computer Science Intern</h3>
     <h5>
         May 2021 - Present |
         <a href="https://anavationllc.com/" style="color: #555; font-size: 1em;" target="_blank" rel="noopener noreferrer">Website</a>
