--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
         <li>Version Control with GitHub</li>
     </ul>
     <p>
-        Even though I was only in the club for a few months, it taught me a decent bit - enough to make this
+        Even though I was only in the club for a few months, it taught me quite a bit - enough to make this
         website from scratch!
     </p>
 </div>
